--- a/web_ui/src/components/styles/ForgotPassword.css
+++ b/web_ui/src/components/styles/ForgotPassword.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
   }
 
-.Login {
+.ForgotPassword {
     background: linear-gradient(#2A00B7, #42006C);
     display: flex;
     justify-content: center;
@@ -12,7 +12,7 @@ body {
     color:#3c009d;
 }
 
-.Login h2 {
+.forgot-container h2 {
     color: #3c009d;
     font-size: 48px;
     font-weight: 700;
@@ -28,7 +28,7 @@ body {
     margin-bottom: 10%;
 }
 
-.login-container {
+.forgot-container {
     background-color: #f4f4f4;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -41,22 +41,22 @@ body {
     text-align: center;
 }
 
-.login-container label,
-.login-container input,
-.login-container form {
+.forgot-container label,
+.forgot-container input,
+.forgot-container form {
     width: 100%;
     display: block;
     margin-bottom: 10px;
 }
 
-.login-container input {
+.forgot-container input {
     padding: 8px;
     box-sizing: border-box;
     border-radius: 5px;
     border: solid 1px #f4f4f4;
 }
 
-.login-container button {
+.forgot-container button {
     background-color: #3c009d;
     color: #fff;
     padding: 10px;
@@ -67,61 +67,6 @@ body {
     margin-bottom: 1%;
 }
 
-#sign-up {
-    text-decoration: none;
-}
-
-#sign-up:visited {
-    color: #3c009d;
-}
-
-#sign-up:hover {
-    text-decoration: underline;
-}
-
-.eye-icon {
-    color: black;
-    background-size: cover;
-    cursor: pointer;
-    display: inline-block;
-    margin-left: -26px;
-    margin-bottom: 3%;
-}
-
-.password-container {
-    display: flex;
-    align-items: center;
-}
-
-a:visited {
-    color: #3c009d;
-}
-
-.text-danger{
+text-danger {
     color: red;
-}
-
-#forgot-password {
-    text-decoration: none;
-}
-
-#forgot-password:hover {
-    text-decoration: underline;
-}
-
-.remember {
-    display: inline flex;
-    align-items: center;
-    justify-content: start;
-    margin-top: 10px;
-}
-
-.remember input[type="checkbox"] {
-    display: inline;
-    padding: 0;
-    margin-right: 5px;
-}
-
-.remember label {
-    display: inline;
 }
